Simplified workflow configuration

--- a/github_tutorial/site/index.html
+++ b/github_tutorial/site/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My GitHub Tutorial Page</title>
+  <title>GitHub Tutorial site</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to My GitHub Actions Tutorial</h1>
+  <h1>HCEMM's GitHub tutorial</h1>
   <p>This page was deployed using GitHub Actions 🚀</p>
 </body>
 </html>
